# Banquo

./: .gitignore  BANQUO_DESIGN.md  Cargo.toml  README.md  decisions.md  install.ps1  test_nan.rs
.github/workflows/: ci.yml
agent-tasks/: agent-tasks.md  completed-tasks.md
configs/: blanco.toml  concrete-dark.toml  concrete.toml  primordial.toml  volcanic-glass.toml  volcanic_glass.toml  zircon.toml
docs/: architecture.md  configuration.md  installation.md  keybindings.md  themes.md  troubleshooting.md
src/: app.rs  config.rs  fonts.rs  main.rs  metrics.rs  presets.rs  test_event.rs  texture_gen.rs  theme.rs
src/core/: mod.rs  pty.rs  session.rs  shell.rs  snapshot.rs  term.rs
src/os/: mod.rs  windows.rs
src/render/: glass.wgsl  mod.rs
tests/: cli_e2e.rs  sprint0_gates.rs
