[package]
name = "banquo"
version = "0.0.0"
edition = "2021"
description = "Banquo — a most beautiful terminal. A verifiable truth/appearance core with a layered material engine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/crussella0129/Banquo"
publish = false

# Declare Banquo its own workspace root. Beyond the Milestone-2 split this also
# stops cargo from climbing into any unrelated ancestor Cargo.toml on the dev's
# machine (the home directory may contain stray manifests). Members are added at
# Milestone 2 when the truth/appearance seam becomes `banquo-core` + `banquo-face`.
[workspace]
members = [
    "."
]

# Milestone 1 is a single binary crate. The truth/appearance seam (design §I/§IV)
# is expressed as module boundaries (`app` = the Face, `fonts` = appearance) so it
# cleaves cleanly into a Cargo workspace (`banquo-core` + `banquo-face`) at
# Milestone 2 when the truth-half (PTY + grid + Snapshot) gains real content.
# [workspace] table reserved for that split.

[dependencies]
# eframe transitively owns the pinned `wgpu` and `winit`; depending on it alone
# (with the wgpu renderer) avoids a double-wgpu tree. Direct `wgpu` is added at
# Milestone 6 (custom WGSL), matched to eframe's resolved version via `cargo tree`.
eframe = { version = "0.34", default-features = false, features = [
    "wgpu",
    "default_fonts",
    # Linux windowing backends. Without these, disabling eframe's default
    # features drops winit's x11/wayland support and the Linux build fails with
    # `compile_error!("...not supported by winit")`. No-ops on Windows/macOS.
    "x11",
    "wayland",
] }
# egui is re-exported by eframe, but Banquo references egui types directly
# (FontDefinitions, ViewportBuilder, …), so declare it at the same minor version
# eframe resolves to keep a single egui in the tree.
egui = "0.34"

# --- Milestone 6: "Fire" — the custom WGSL shader pipeline ---
# Direct wgpu + egui-wgpu for the `egui_wgpu::CallbackTrait` glass-material render
# pass. CARET versions (not `=`) so cargo unifies on eframe's resolution — a hard
# `=` pin would force a second wgpu tree on the next eframe patch bump (ADR-001).
# The single-version guarantee is enforced by `cargo tree -p wgpu`.
wgpu = "29"
egui-wgpu = "0.34"
# Safe POD<->bytes for the shader uniform buffer (`Pod`/`Zeroable` *derives* — no
# unsafe in our crate; ADR-002 stays intact).
bytemuck = { version = "1", features = ["derive"] }

# --- Milestone 2: "It echoes" ---
# The truth-half core: a safe-Rust VT parser + grid engine (ADR-004). Banquo wraps
# it behind its own Snapshot/Cell types so no alacritty_* type leaks downstream.
alacritty_terminal = "0.26"
# Cross-platform PTY: Unix openpty/forkpty, Windows ConPTY, macOS — behind one
# trait. The same abstraction WezTerm ships (design §VIII).
portable-pty = "0.9"
# Lock-free publish for the snapshot handoff (design §IV): the reader thread
# builds the next Snapshot and atomically swaps the Arc pointer; the Face always
# reads a complete, consistent frame — never a half-updated grid.
arc-swap = "1"
# Convenient error handling for PTY/session spawn failures.
anyhow = "1"
# Config loading and deserialization (Sprint 4 Typography & Registry)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
notify = "6"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.7.1"
raw-window-handle = "0.6"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[profile.release]
opt-level = 3
lto = "thin"
